# HomoErectus

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
config/: default.toml
dashboard-ui/: README.md
docker/: README.md
docs/: ARCHITECTURE_STATUS.md
docs/architecture/: L0_EXISTENCE_MODEL.md  L1_DATA_CONTRACTS.md  L2_PROCESS_ARCHITECTURE.md  L3_COGNITIVE_PIPELINE.md  L4_MEMORY_ARCHITECTURE.md  L5_BODY_AND_PERCEPTION.md  L6_DESIRE_EMOTION_PREFERENCE.md  L7_SLEEP_AND_COMPILATION.md  L8_INITIALIZATION.md
src/: __init__.py  run_agent.py
tests/: test_public_skeleton.py
