[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homoerectus-public"
version = "0.1.0"
description = "Public whitepaper and runtime skeleton for HomoErectus"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AbsoluteAGI" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
